# normal-order-reduction-grammars

./: ChangeLog.md  README.md  normal-order-reduction-grammars.cabal
app/: Main.hs
scripts/: 0.in  1.in  2.in  3.in  4.in  5.in  6.in  8.in  compute-constant.m  compute-density.m
src/: Algebra.hs  ReductionGrammar.hs
