name:                normal-order-reduction-grammars
version:             2.0
synopsis:            Supplement to the "Normal-order reduction grammars" article
description:         Please see README.md
homepage:            https://github.com/maciej-bendkowski/normal-order-reduction-grammars
license:             GPL-2
license-file:        LICENSE
author:              Maciej Bendkowski
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2016 Maciej Bendkowski 
category:            Math 
build-type:          Simple
--extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   ReductionGrammar
                   , Algebra
  build-depends:     base >=4.7 && <5
  default-language:  Haskell2010

executable norg-gf
  hs-source-dirs:    app 
  main-is:           Main.hs
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base
                   , normal-order-reduction-grammars
  default-language:  Haskell2010

source-repository head
  type:         git
  homepage:     https://github.com/maciej-bendkowski/normal-order-reduction-grammars
